[gd_scene load_steps=3 format=2]

[ext_resource path="res://Equipment/Guns/GunTemplate.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Equipment/Guns/GunTest.png" type="Texture" id=2]

[node name="GunTemplate" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="GunPoint" type="Position2D" parent="."]
position = Vector2( 19, 0 )

[node name="BulletCooldown" type="Timer" parent="."]
one_shot = true

[node name="CameraShake" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GunFire" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="BulletCooldown" to="." method="_on_BulletCooldown_timeout"]
[connection signal="timeout" from="CameraShake" to="." method="_on_CameraShake_timeout"]
